--- a/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=Z:
-LastDirectory=\WIN4 WS14\WEBT\SQLiteDatabaseBrowserPortable
+LastDrive=C:
+LastDirectory=\Users\Viktor\Desktop\Webtec\Autovermietung\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=Z:\WIN4 WS14
+PAL:LastPortableAppsBaseDir=C:\Users\Viktor\Desktop\Webtec
