--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,9 +36,9 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.sqlite.JDBC
+db.default.driver="org.sqlite.JDBC"
 db.default.url="jdbc:sqlite:app/db/database"
-# db.default.user=sa
+# db.default.user="sa"
 # db.default.password=""
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
