JDBC hinzugefügt, Fahrzeugübersicht umgestellt

--- a/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=C:
-LastDirectory=\Users\Viktor\Desktop\Webtec\Autovermietung\SQLiteDatabaseBrowserPortable
+LastDrive=Z:
+LastDirectory=\WIN4 WS14\WEBT\Autovermietung\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=C:\Users\Viktor\Desktop\Webtec
+PAL:LastPortableAppsBaseDir=Z:\WIN4 WS14\WEBT
