buchungsübersicht aus DB

--- a/SQLiteDatabaseBrowserPortable/Data/PortableApps.comLauncherRuntimeData-SQLiteDatabaseBrowserPortable.ini
+++ b/SQLiteDatabaseBrowserPortable/Data/PortableApps.comLauncherRuntimeData-SQLiteDatabaseBrowserPortable.ini
@@ -1,2 +1,2 @@
 [PortableApps.comLauncher]
-PluginsDir=C:\Users\luhansen\AppData\Local\Temp\nsnBE63.tmp
+PluginsDir=C:\Users\luhansen\AppData\Local\Temp\nsg4BB2.tmp
