--- a/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=Z:
-LastDirectory=\WIN4 WS14\WEBT\Autovermietung\SQLiteDatabaseBrowserPortable
+LastDrive=D:
+LastDirectory=\Repository\Autovermietung\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=Z:\WIN4 WS14\WEBT
+PAL:LastPortableAppsBaseDir=D:\Repository
