Vorbereitungen SQL buchbare Fahrzeuge + SQL buchen (Problem mit db lock)

--- a/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=D:
-LastDirectory=\Repository\Autovermietung\SQLiteDatabaseBrowserPortable
+LastDrive=C:
+LastDirectory=\Users\HLK\Documents\_EigeneDateien\_HTWG KN\2014WS WIN4\WEBT\Projekt\Autovermietung\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=D:\Repository
+PAL:LastPortableAppsBaseDir=C:\Users\HLK\Documents\_EigeneDateien\_HTWG KN\2014WS WIN4\WEBT\Projekt
