prepared statements + registrieren ohne adresse anzulegen

--- a/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=C:
-LastDirectory=\Users\HLK\Documents\_EigeneDateien\_HTWG KN\2014WS WIN4\WEBT\Projekt\Autovermietung\SQLiteDatabaseBrowserPortable
+LastDrive=Z:
+LastDirectory=\WIN4 WS14\WEBT\Autovermietung\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=C:\Users\HLK\Documents\_EigeneDateien\_HTWG KN\2014WS WIN4\WEBT\Projekt
+PAL:LastPortableAppsBaseDir=Z:\WIN4 WS14\WEBT
