--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,8 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+#SQLiteBrowser files
+/SQLiteDatabaseBrowserPortable/Data/settings
+/SQLiteDatabaseBrowserPortable/Data/settings/
 SQLiteDatabaseBrowserPortableSettings.ini
 sqlitebrowser.reg
